[gd_scene load_steps=11 format=3 uid="uid://jfl7801gsck4"]

[ext_resource type="Script" path="res://scenes/net_game.gd" id="1_klc45"]
[ext_resource type="Texture2D" uid="uid://bqw76nom2n3v2" path="res://assets/wood background.png" id="2_pt2u7"]
[ext_resource type="Texture2D" uid="uid://cikt6fpf2p14q" path="res://assets/FREEUIASSETPACK_BY@CAMTATZ/Buttons/BTN_SLIDER_SM (10).png" id="3_qj451"]
[ext_resource type="Texture2D" uid="uid://bwaihguq6mv8c" path="res://assets/FREEUIASSETPACK_BY@CAMTATZ/Buttons/BTN_SLIDER_SM (3).png" id="4_b2r7h"]
[ext_resource type="PackedScene" uid="uid://ct3bsswiysob6" path="res://nodes/gui/score.tscn" id="5_753p1"]
[ext_resource type="Theme" uid="uid://bh6jkjg5lp1j6" path="res://nodes/gui/nums.tres" id="6_wh3hn"]
[ext_resource type="PackedScene" uid="uid://drwl7dk0akq4i" path="res://nodes/game_grid.tscn" id="7_ft1rt"]
[ext_resource type="Texture2D" uid="uid://bjdrcnpwe6ebv" path="res://assets/FREEUIASSETPACK_BY@CAMTATZ/Buttons/BTN_PLAIN (1).png" id="8_4bu0s"]
[ext_resource type="PackedScene" uid="uid://b3l1tquvk0hfa" path="res://nodes/gui/died.tscn" id="9_8vhxc"]
[ext_resource type="PackedScene" uid="uid://cxdd4a8sfxs2p" path="res://nodes/gui/Successed.tscn" id="10_52xw8"]

[node name="NetGame" type="Node2D"]
script = ExtResource("1_klc45")

[node name="StoryHUD" type="CanvasLayer" parent="."]

[node name="Back" type="Sprite2D" parent="StoryHUD"]
position = Vector2(240, 432)
scale = Vector2(0.9375, 1.6875)
texture = ExtResource("2_pt2u7")

[node name="Pause" type="TextureButton" parent="StoryHUD"]
offset_left = 16.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 64.0
texture_normal = ExtResource("3_qj451")
texture_pressed = ExtResource("4_b2r7h")
ignore_texture_size = true
stretch_mode = 0

[node name="Score" parent="StoryHUD" instance=ExtResource("5_753p1")]
offset_left = 16.0
offset_top = 128.0
offset_right = 192.0
offset_bottom = 160.0

[node name="Level" type="Label" parent="StoryHUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = 80.0
offset_right = -152.0
offset_bottom = 114.0
grow_horizontal = 2
theme = ExtResource("6_wh3hn")
theme_override_font_sizes/font_size = 23
text = "NET"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameGrid" parent="StoryHUD" instance=ExtResource("7_ft1rt")]
offset_left = 16.0
offset_top = 184.0
offset_right = 464.0
offset_bottom = 736.0

[node name="Items" type="NinePatchRect" parent="StoryHUD"]
offset_left = 16.0
offset_top = 752.0
offset_right = 464.0
offset_bottom = 848.0
texture = ExtResource("8_4bu0s")
patch_margin_left = 25
patch_margin_top = 12
patch_margin_right = 23
patch_margin_bottom = 13

[node name="Grid" type="GridContainer" parent="StoryHUD/Items"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 8.0
offset_right = -17.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Died" parent="StoryHUD" instance=ExtResource("9_8vhxc")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -120.0
offset_right = 204.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2

[node name="Successed" parent="StoryHUD" instance=ExtResource("10_52xw8")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -160.0
offset_right = 176.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="StoryHUD/Pause" to="." method="_on_pause_pressed"]
[connection signal="update_score" from="StoryHUD/Score" to="." method="update_score"]
[connection signal="add_score" from="StoryHUD/GameGrid" to="." method="add_score"]
[connection signal="end" from="StoryHUD/GameGrid" to="." method="failed"]
[connection signal="wait_event" from="StoryHUD/GameGrid" to="." method="wait_next_event"]
[connection signal="wait_init_lines" from="StoryHUD/GameGrid" to="." method="wait_init_lines"]
[connection signal="wait_new_line" from="StoryHUD/GameGrid" to="." method="wait_next_line"]
